[gd_scene load_steps=9 format=3 uid="uid://c5tr4y5xta341"]

[ext_resource type="Script" path="res://scenes/Levels/level_scripts/level_3_script.gd" id="1_kv4xa"]
[ext_resource type="FontFile" uid="uid://d2x57q70kr1ns" path="res://sprites/Fonts/Retro Gaming.ttf" id="1_v32m6"]
[ext_resource type="Texture2D" uid="uid://iyyvn4is4n0l" path="res://sprites/phone_text_screen_yellow-export-export.png" id="2_hog6o"]
[ext_resource type="Texture2D" uid="uid://bedr7utj2dvq7" path="res://sprites/grey_message.png" id="3_8ka68"]
[ext_resource type="Texture2D" uid="uid://fpwyy860kilu" path="res://sprites/blue_message.png" id="4_48ex3"]
[ext_resource type="Texture2D" uid="uid://cn6d7uktd7mpc" path="res://sprites/image.jpg" id="5_k2k5x"]
[ext_resource type="AudioStream" uid="uid://cwj5e5qqjmb1u" path="res://sprites/Fonts/imsg_sound-[AudioTrimmer.com].mp3" id="6_68mec"]
[ext_resource type="AudioStream" uid="uid://dirvj6olmayw" path="res://sprites/Fonts/imsg_recieved.mp3" id="7_cikvi"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_kv4xa")

[node name="Camera2D" type="Camera2D" parent="."]
metadata/_edit_lock_ = true

[node name="Options" type="Marker2D" parent="."]
position = Vector2(-553, 158)

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 703.0
offset_top = 11.0
offset_right = 816.0
offset_bottom = 56.0
scale = Vector2(1, 1.01471)

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Continue_button" type="Button" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v32m6")
theme_override_font_sizes/font_size = 18
text = "Continue"

[node name="phone_imessage" type="Sprite2D" parent="."]
position = Vector2(300, 3)
scale = Vector2(0.595, 0.595)
texture = ExtResource("2_hog6o")

[node name="M1" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, -329.916)

[node name="M2" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, -274.958)

[node name="ML2" type="Marker2D" parent="phone_imessage"]
position = Vector2(0, -215)
rotation = 1.5708

[node name="M3" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, -155)

[node name="ML3" type="Marker2D" parent="phone_imessage"]
position = Vector2(0, -90)
rotation = 1.5708

[node name="M4" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, -90)

[node name="M5" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, 5.04202)

[node name="M6" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, 96.6387)

[node name="ML4" type="Marker2D" parent="phone_imessage"]
position = Vector2(0, 180.252)
rotation = 1.5708

[node name="ML4_d" type="Marker2D" parent="phone_imessage"]
position = Vector2(-130.378, 180.252)
rotation = 1.5708
scale = Vector2(0.989672, 1)

[node name="M7" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, 250.252)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="date" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 242.0
offset_top = -190.0
offset_right = 364.0
offset_bottom = -167.0
theme_override_fonts/font = ExtResource("1_v32m6")
theme_override_font_sizes/font_size = 10
text = "02/20/2022 3:37 AM"

[node name="L1_1d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1670.0
offset_top = 81.0
offset_right = 1827.0
offset_bottom = 132.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_1d"]
texture_filter = 1
layout_mode = 0
offset_left = 57.3278
offset_top = 9.41222
offset_right = 98.3278
offset_bottom = 32.4122
scale = Vector2(1.07727, 1.6592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "wtf fr?"

[node name="L1_1b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1325.0
offset_top = 131.0
offset_right = 1484.0
offset_bottom = 182.0
scale = Vector2(1.02383, 0.542139)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_1b"]
texture_filter = 1
layout_mode = 0
offset_left = 33.1907
offset_top = 5.98065
offset_right = 137.191
offset_bottom = 27.9806
scale = Vector2(0.944928, 1.88992)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "are you okay???"

[node name="L1_1c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1677.0
offset_top = 128.0
offset_right = 1836.0
offset_bottom = 179.0
scale = Vector2(0.981397, 0.603036)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_1c"]
texture_filter = 1
layout_mode = 0
offset_left = 37.7159
offset_top = 5.4212
offset_right = 120.716
offset_bottom = 28.4212
scale = Vector2(1.02264, 1.79713)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "what? wym??"

[node name="L1_1a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1335.0
offset_top = 84.0
offset_right = 1494.0
offset_bottom = 135.0
scale = Vector2(1.01377, 0.553669)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_1a"]
texture_filter = 1
layout_mode = 0
offset_left = 29.5821
offset_top = 6.89119
offset_right = 154.582
offset_bottom = 29.8912
scale = Vector2(0.95091, 1.81877)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "are you stupid?"

[node name="A1_2" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1155.0
offset_top = 38.0
offset_right = 1411.0
offset_bottom = 89.0
scale = Vector2(1.22745, 0.65153)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 79
patch_margin_top = 25
patch_margin_right = 87
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_2"]
texture_filter = 1
layout_mode = 0
offset_left = 12.178
offset_top = 11.3146
offset_right = 267.178
offset_bottom = 34.3146
scale = Vector2(0.734084, 1.41756)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Some guy just entered my house and got arrested"

[node name="A1_2b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1678.0
offset_top = -5.00002
offset_right = 1843.0
offset_bottom = 46.0
scale = Vector2(1.02025, 0.728441)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_2b"]
texture_filter = 1
layout_mode = 0
offset_left = 14.7023
offset_top = 10.9824
offset_right = 180.702
offset_bottom = 33.9824
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Evans brother, Anekin?"

[node name="A1_4a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1226.0
offset_top = 85.0
offset_right = 1385.0
offset_bottom = 136.0
scale = Vector2(0.399466, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_4a"]
texture_filter = 1
layout_mode = 0
offset_left = 60.0801
offset_top = 6.17747
offset_right = 74.0801
offset_bottom = 28.1775
scale = Vector2(3.16185, 1.57716)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 15
text = ";-;"

[node name="A1_4b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1158.0
offset_top = 131.0
offset_right = 1317.0
offset_bottom = 182.0
scale = Vector2(0.9607, 0.663406)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_4b"]
texture_filter = 1
layout_mode = 0
offset_left = 16.6545
offset_top = 8.89838
offset_right = 149.654
offset_bottom = 31.8984
scale = Vector2(0.965071, 1.49579)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Im shaking but yeah"

[node name="A1_4c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1558.0
offset_top = 127.0
offset_right = 1717.0
offset_bottom = 178.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_4c"]
texture_filter = 1
layout_mode = 0
offset_left = 41.3907
offset_top = 7.78277
offset_right = 77.3907
offset_bottom = 30.7828
scale = Vector2(2.07842, 1.74355)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "uhhh"

[node name="A1_4d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1560.0
offset_top = 81.0
offset_right = 1719.0
offset_bottom = 132.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_4d"]
texture_filter = 1
layout_mode = 0
offset_left = 28.32
offset_top = 9.38802
offset_right = 84.32
offset_bottom = 32.388
scale = Vector2(2.09333, 1.43718)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "yeah 😭"

[node name="L1_2a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1503.0
offset_top = 181.0
offset_right = 1662.0
offset_bottom = 232.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2a"]
texture_filter = 1
layout_mode = 0
offset_left = 41.5108
offset_top = 9.41223
offset_right = 125.511
offset_bottom = 32.4123
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "you dumbass"

[node name="L1_2bbb" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1306.0
offset_top = 291.0
offset_right = 1465.0
offset_bottom = 342.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2bbb"]
texture_filter = 1
layout_mode = 0
offset_left = 56.339
offset_top = 9.41223
offset_right = 113.339
offset_bottom = 32.4122
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13

[node name="L1_2b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1425.0
offset_top = 227.0
offset_right = 1664.0
offset_bottom = 278.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2b"]
texture_filter = 1
layout_mode = 0
offset_left = 12.8425
offset_top = 9.41223
offset_right = 244.843
offset_bottom = 32.4123
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "why would you open the door so late"

[node name="L1_2c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1674.0
offset_top = 182.0
offset_right = 1833.0
offset_bottom = 233.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2c"]
texture_filter = 1
layout_mode = 0
offset_left = 56.339
offset_top = 7.90341
offset_right = 113.339
offset_bottom = 30.9034
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Anekin...."

[node name="L1_2d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1681.0
offset_top = 231.0
offset_right = 1838.0
offset_bottom = 282.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2d"]
texture_filter = 1
layout_mode = 0
offset_left = 56.3392
offset_top = 9.41225
offset_right = 114.339
offset_bottom = 32.4122
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "LMFAO"

[node name="A1_5" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1744.0
offset_top = 283.0
offset_right = 2006.0
offset_bottom = 352.0
scale = Vector2(1.02025, 0.728441)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_5"]
texture_filter = 1
layout_mode = 0
offset_left = 13.7221
offset_top = 5.7748
offset_right = 264.722
offset_bottom = 41.7748
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "someone knocked on my door so late at 
night, so i went and checked "

[node name="A1_6" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1741.0
offset_top = 341.0
offset_right = 1999.0
offset_bottom = 410.0
scale = Vector2(1.02025, 0.728441)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_6"]
texture_filter = 1
layout_mode = 0
offset_left = 17.6428
offset_top = 7.14761
offset_right = 268.643
offset_bottom = 43.1476
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "my peephole was covered in snow, so I
just opened the door, and some dude"

[node name="A1_7" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1740.0
offset_top = 399.0
offset_right = 1998.0
offset_bottom = 468.0
scale = Vector2(1.02025, 0.728441)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_7"]
texture_filter = 1
layout_mode = 0
offset_left = 18.6228
offset_top = 7.1476
offset_right = 269.623
offset_bottom = 43.1476
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "in bad english, kept begging for help, 
and then forced himself inside"

[node name="A1_8a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1338.0
offset_top = 183.0
offset_right = 1497.0
offset_bottom = 234.0
scale = Vector2(0.891879, 0.638189)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_8a"]
texture_filter = 1
layout_mode = 0
offset_left = 33.6368
offset_top = 8.80992
offset_right = 128.637
offset_bottom = 31.8099
scale = Vector2(1.01146, 1.47874)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "oops hehe 😅"

[node name="A1_8b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1202.0
offset_top = 229.0
offset_right = 1418.0
offset_bottom = 280.0
scale = Vector2(1.00187, 0.74932)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_8b"]
texture_filter = 1
layout_mode = 0
offset_left = 12.706
offset_top = 10.9824
offset_right = 216.706
offset_bottom = 33.9824
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "I thought it was my mom or sum"

[node name="A1_8c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1852.0
offset_top = 184.0
offset_right = 2111.0
offset_bottom = 235.0
scale = Vector2(0.4751, 0.650215)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_8c"]
texture_filter = 1
layout_mode = 0
offset_left = 39.9917
offset_top = 9.5864
offset_right = 125.992
offset_bottom = 32.5864
scale = Vector2(2.07842, 1.52547)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "its ok im alive"

[node name="A1_8d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1862.0
offset_top = 231.0
offset_right = 2021.0
offset_bottom = 282.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_8d"]
texture_filter = 1
layout_mode = 0
offset_left = 41.3907
offset_top = 7.78277
offset_right = 77.3907
offset_bottom = 30.7828
scale = Vector2(2.07842, 1.74355)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "HAHA"

[node name="L1_3a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1307.0
offset_top = 341.0
offset_right = 1466.0
offset_bottom = 392.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_3a"]
texture_filter = 1
layout_mode = 0
offset_left = 29.6479
offset_top = 7.90341
offset_right = 142.648
offset_bottom = 30.9034
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Yeah ill be there :)"

[node name="L1_3b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1309.0
offset_top = 389.0
offset_right = 1468.0
offset_bottom = 440.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_3b"]
texture_filter = 1
layout_mode = 0
offset_left = 63.2589
offset_top = 9.41228
offset_right = 95.2589
offset_bottom = 32.4123
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "ew."

[node name="L1_3c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1474.0
offset_top = 342.0
offset_right = 1633.0
offset_bottom = 393.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("4_48ex3")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_3c"]
texture_filter = 1
layout_mode = 0
offset_left = 67.2131
offset_top = 7.90345
offset_right = 99.2131
offset_bottom = 30.9035
scale = Vector2(1.4764, 2.28679)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "👍"

[node name="A1_3" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1494.0
offset_top = 36.0
offset_right = 1673.0
offset_bottom = 87.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_3"]
texture_filter = 1
layout_mode = 0
offset_left = 30.4984
offset_top = 9.38789
offset_right = 84.4984
offset_bottom = 32.3879
scale = Vector2(2.276, 1.63059)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "holy shit"

[node name="A1_4bbb" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1165.0
offset_top = 387.0
offset_right = 1324.0
offset_bottom = 438.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_4bbb"]
texture_filter = 1
layout_mode = 0
offset_left = 54.4615
offset_top = 7.78277
offset_right = 92.4615
offset_bottom = 30.7828
scale = Vector2(2.276, 1.63059)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "...k"

[node name="A1_jk" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1170.0
offset_top = 476.0
offset_right = 1329.0
offset_bottom = 527.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("3_8ka68")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_jk"]
texture_filter = 1
layout_mode = 0
offset_left = 21.7846
offset_top = 6.17751
offset_right = 75.7846
offset_bottom = 29.1775
scale = Vector2(2.276, 1.63059)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "jk haha.."

[node name="BG" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1, -262)
texture = ExtResource("5_k2k5x")
metadata/_edit_lock_ = true

[node name="msg_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_68mec")
volume_db = 3.104
panning_strength = 0.0

[node name="msg_recieved" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_cikvi")
volume_db = -6.209
